@@ -1,3 +1,11 @@
+2004-04-13  Bruno Haible  <bruno@clisp.org>
+
+	Fix MAKE-INSTANCE-OBSOLETE's warning message.
+	* clos-class2.lisp (*make-instances-obsolete-caller*): New variable.
+	(ensure-class): Bind it.
+	(make-instances-obsolete-standard-class-nonrecursive): Use it in the
+	warning message.
+
 2004-04-27  Sam Steingold  <sds@gnu.org>
 
 	* modules/syscalls/calls.c (CRYPT, ENCRYPT, SETKEY): implemented
